--- a/kaggle/PGS4_ep7/2. machine learning.ipynb
+++ b/kaggle/PGS4_ep7/2. machine learning.ipynb
@@ -10,11 +10,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-24 06:15:51.439066: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-12-30 01:30:43.676806: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1735020951.571328   46763 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1735020951.609713   46763 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-12-24 06:15:51.956433: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1735522243.808532    2811 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1735522243.845125    2811 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-12-30 01:30:44.141375: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "05a78a01-4129-4313-8a8c-82fb35794cdd",
    "metadata": {},
    "outputs": [],
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "f0785842-6303-49ac-8fce-74dc6157c205",
    "metadata": {},
    "outputs": [],
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6bee4d45-5aa2-4fd0-bda0-2d04ca3f2589",
    "metadata": {},
    "outputs": [],
@@ -1017,45 +1017,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "a701e906-bf33-4722-b665-b6376f92817b",
+   "execution_count": 11,
+   "id": "7c527091-72ef-413d-80cf-0bb1e4fd4ed1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "del df_tgt_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "7c527091-72ef-413d-80cf-0bb1e4fd4ed1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "id\n",
-       "11504798    0.005462\n",
-       "11504799    0.708622\n",
-       "11504800    0.439974\n",
-       "11504801    0.000117\n",
-       "11504802    0.079150\n",
-       "              ...   \n",
-       "19174659    0.160997\n",
-       "19174660    0.000316\n",
-       "19174661    0.000522\n",
-       "19174662    0.717448\n",
-       "19174663    0.000207\n",
-       "Length: 7669866, dtype: float64"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cb1.get_predictor()(df_test)"
+    "cb1.get_predictor()(df_test).rename('Response').to_csv(os.path.join('result', 'submission1.csv'))"
    ]
   },
   {
