--- a/kaggle/PGS4_ep7/2. machine learning.ipynb
+++ b/kaggle/PGS4_ep7/2. machine learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "984525dc-179d-4884-90f8-ecce509356f9",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-30 01:30:43.676806: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1735522243.808532    2811 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1735522243.845125    2811 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-12-30 01:30:44.141375: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "2025-01-01 14:33:43.469845: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-01-01 14:33:43.497781: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-01-01 14:33:43.942107: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -34,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6ec646f1-9210-4e6f-9e68-3b5b032eaaaa",
    "metadata": {},
    "outputs": [
@@ -175,24 +173,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>Int8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VA_Age</th>\n",
-       "      <td>Vehicle_Age, Age_S 그리고 Policy_Sales_Channel_S를...</td>\n",
-       "      <td>combine</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11504798.0</td>\n",
-       "      <td>5838.0</td>\n",
-       "      <td>Categorical</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VD_PSC</th>\n",
-       "      <td>Vehicle_Damage, Previously_Insured, Policy_Sal...</td>\n",
-       "      <td>combine</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11504798.0</td>\n",
-       "      <td>455.0</td>\n",
-       "      <td>Categorical</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>VP</th>\n",
@@ -365,8 +345,6 @@
        "Region_Code                                                          None   \n",
        "Region_Code_S                                         Region_Code를 범주형 변수   \n",
        "Response                                                             None   \n",
-       "VA_Age                  Vehicle_Age, Age_S 그리고 Policy_Sales_Channel_S를...   \n",
-       "VD_PSC                  Vehicle_Damage, Previously_Insured, Policy_Sal...   \n",
        "VP                             Vehicle_Damage, Previously_Insured를 결합합니다.   \n",
        "VPA                     Vehicle_Damage, Previously_Insured, Annual_Pre...   \n",
        "VPAg                    Vehicle_Damage, Previously_Insured, Age_S를 결합합니다.   \n",
@@ -398,8 +376,6 @@
        "Region_Code                 None  0.0         0.0       0.0   \n",
        "Region_Code_S           cat_proc  0.0  11504798.0      53.0   \n",
        "Response                    None  0.0         0.0       0.0   \n",
-       "VA_Age                   combine  0.0  11504798.0    5838.0   \n",
-       "VD_PSC                   combine  0.0  11504798.0     455.0   \n",
        "VP                       combine  0.0  11504798.0       4.0   \n",
        "VPA                      combine  0.0  11504798.0  150474.0   \n",
        "VPAg                     combine  0.0  11504798.0     261.0   \n",
@@ -431,8 +407,6 @@
        "Region_Code             Categorical(ordering='physical')  \n",
        "Region_Code_S                                Categorical  \n",
        "Response                                            Int8  \n",
-       "VA_Age                                       Categorical  \n",
-       "VD_PSC                                       Categorical  \n",
        "VP                                           Categorical  \n",
        "VPA                                          Categorical  \n",
        "VPAg                                         Categorical  \n",
@@ -452,7 +426,7 @@
        "id                                                 Int32  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8a530483-d73a-4e8c-8306-67cd00b0074f",
    "metadata": {},
    "outputs": [],
@@ -530,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "46a2a1db-7844-4378-89a8-5b8d7503f123",
    "metadata": {},
    "outputs": [],
@@ -574,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a78e3fed-7344-4bb8-8457-fafcf17f9643",
    "metadata": {},
    "outputs": [],
@@ -687,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "97035c4e-86e6-4e56-84f1-ff1b07167b11",
    "metadata": {},
    "outputs": [],
@@ -697,17 +671,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4544e521-16c8-4430-b771-958f8a71271c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8894339951376733"
+       "0.8893343300592946"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "05a78a01-4129-4313-8a8c-82fb35794cdd",
    "metadata": {},
    "outputs": [],
@@ -745,31 +719,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "84217af5-3bc2-46c6-93a8-6131512844fd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.91197412898988,\n",
-       " 0.9128653591163912,\n",
-       " 0.9130351624263097,\n",
-       " 0.9129334930848559,\n",
-       " 0.9128286380114352]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hparams = {\n",
     "    'model_params': {'n_estimators': 1200, 'learning_rate': 0.15, 'max_depth': 9},\n",
     "    'X_num': ['Annual_Premium', 'Age', 'D1', 'D2', 'D3', 'D4', 'D5', 'D6', 'D7', 'D8', 'D9', 'D10'], \n",
-    "    'X_cat': ['Annual_Premium_S', 'Vehicle_Damage', 'Previously_Insured', 'Policy_Sales_Channel_S', 'Age_S', 'Vehicle_Age', 'Region_Code_S', \n",
+    "    'X_cat': ['Vehicle_Damage', 'Previously_Insured', 'Policy_Sales_Channel_S', 'Age_S', 'Vehicle_Age', 'Region_Code_S', \n",
     "              'Gender', 'Driving_License'],\n",
+    "    'X_ord': ['Annual_Premium'], 'ord': {'min_frequency': 100, 'unknown_value': -1, 'handle_unknown': \"use_encoded_value\"}\n",
     "}\n",
     "result = cb1.cv(df_train, hparams, task_type='GPU')\n",
     "result['valid_scores']"
