--- a/kaggle/PGS5_ep1/1. wrangling.ipynb
+++ b/kaggle/PGS5_ep1/1. wrangling.ipynb
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "id": "86f48a2b-51d2-4876-8fbe-19b68c8ea2de",
    "metadata": {},
    "outputs": [],
@@ -694,6 +694,17 @@
    ],
    "source": [
     "df_train['date'].agg(['min', 'max']), df_test['date'].agg(['min', 'max'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "389792aa-618d-4e60-8d42-34a82b3910a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train.to_parquet(os.path.join('data', 'train.parquet'))\n",
+    "df_test.to_parquet(os.path.join('data', 'test.parquet'))"
    ]
   },
   {
@@ -4357,9 +4368,7 @@
   {
    "cell_type": "markdown",
    "id": "edc55c29-f43e-4e1a-95d1-cf0606431bb6",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Reformulation Problem 2"
    ]
@@ -5560,24 +5569,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2f6638d6-8fe8-4a11-90ad-c4b0c974ce3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_train = df_train.join(df_dt, on = 'date')\n",
-    "df_test = df_test.join(df_dt, on = 'date')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 115,
    "id": "44dfd558-359c-4a51-82bf-1f2eda69fdcf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train.to_parquet(os.path.join('data', 'train.parquet'))\n",
-    "df_test.to_parquet(os.path.join('data', 'test.parquet'))\n",
     "df_train_c.to_parquet(os.path.join('data', 'train_c.parquet'))"
    ]
   },
