--- a/kaggle/PGS5_ep1/1. wrangling.ipynb
+++ b/kaggle/PGS5_ep1/1. wrangling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "56fe2996-ce56-4303-a5e5-8847369de05f",
    "metadata": {},
    "outputs": [
@@ -18,12 +18,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.12.6 (main, Sep 30 2024, 02:19:13) [GCC 9.4.0]\n",
-      "pandas 2.2.3\n",
+      "3.12.3 (main, May  1 2024, 17:33:23) [GCC 11.4.0]\n",
+      "pandas 2.2.2\n",
       "polars 1.12.0\n",
       "matplotlib 3.8.4\n",
       "seaborn 0.13.2\n",
       "numpy 1.26.4\n",
+      "lightgbm 4.3.0\n",
       "catboost 1.2.5\n",
       "xgboost 2.1.2\n"
      ]
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "433c19e5-065f-43fd-81dd-dfab4c20ab85",
    "metadata": {},
    "outputs": [],
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b4c86a85-3337-447c-81b7-d400f184cde0",
    "metadata": {},
    "outputs": [],
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "2dad128c-794d-4bcb-a72a-2500c4add70d",
    "metadata": {},
    "outputs": [],
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "2d19ec4e-9d63-400e-8b68-b00ee0b1331d",
    "metadata": {},
    "outputs": [],
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "54c6cc82-cc54-48c5-980b-c53be6933646",
    "metadata": {},
    "outputs": [],
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "3757c5a0-cd1f-47de-9370-399bb88466bd",
    "metadata": {},
    "outputs": [
@@ -403,7 +404,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "4f625672-8a95-4165-89de-9b1d722197f9",
    "metadata": {},
    "outputs": [
@@ -528,7 +529,7 @@
        "[2 rows x 21 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "612a4109-8e45-48bb-8f20-19da6369fa33",
    "metadata": {},
    "outputs": [
@@ -647,7 +648,7 @@
        "mean  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0      0.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "86f48a2b-51d2-4876-8fbe-19b68c8ea2de",
    "metadata": {},
    "outputs": [],
@@ -672,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "a234db66-b96d-44c6-9914-0ca22264901d",
    "metadata": {},
    "outputs": [
@@ -687,7 +688,7 @@
        " Name: date, dtype: object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "389792aa-618d-4e60-8d42-34a82b3910a1",
    "metadata": {},
    "outputs": [],
@@ -5720,7 +5721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
