--- a/kaggle/PGS5/PGS5_ep2/phase1.ipynb
+++ b/kaggle/PGS5/PGS5_ep2/phase1.ipynb
@@ -18,26 +18,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-03 01:13:50.036846: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1738545230.168974    5138 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1738545230.205900    5138 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-02-03 01:13:50.516292: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "2025-02-04 00:30:28.168250: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-02-04 00:30:28.487191: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-02-04 00:30:29.230130: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.12.6 (main, Sep 30 2024, 02:19:13) [GCC 9.4.0]\n",
-      "pandas 2.2.3\n",
+      "3.12.3 (main, May  1 2024, 17:33:23) [GCC 11.4.0]\n",
+      "pandas 2.2.2\n",
       "polars 1.12.0\n",
       "matplotlib 3.8.4\n",
       "seaborn 0.13.2\n",
       "numpy 1.26.4\n",
-      "scipy 1.12.0\n",
-      "sklearn 1.5.2\n",
+      "scipy 1.13.0\n",
+      "sklearn 1.4.2\n",
+      "lightgbm 4.3.0\n",
       "xgboost 2.1.2\n",
       "catboost 1.2.5\n"
      ]
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 2,
    "id": "fc43f325-c939-4716-a8eb-8fcc1fa9f67f",
    "metadata": {},
    "outputs": [],
@@ -100,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 3,
    "id": "33013cd1-a38d-4a21-8505-780df63914b5",
    "metadata": {},
    "outputs": [],
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 4,
    "id": "5607686e-6427-43d4-8c61-c00086e18936",
    "metadata": {},
    "outputs": [],
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 5,
    "id": "7306004a-b362-4caa-ad93-cb28528356cc",
    "metadata": {},
    "outputs": [],
@@ -154,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 6,
    "id": "2fee10d3-c0f8-4bff-a401-b75f35c381c5",
    "metadata": {},
    "outputs": [],
@@ -175,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 7,
    "id": "694a39c2-a46b-47f8-804d-13e40c20ab93",
    "metadata": {},
    "outputs": [
@@ -209,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 8,
    "id": "84aaf08e-ab30-4a0b-aaef-281c69d3ef46",
    "metadata": {},
    "outputs": [
@@ -227,7 +226,7 @@
        " ['Compartments', 'Weight Capacity (kg)'])"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 9,
    "id": "4fe55f04-6a3e-4b2e-a196-870e1e1c3e2d",
    "metadata": {},
    "outputs": [],
@@ -287,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 10,
    "id": "b790e192-39c5-41c5-93ac-f562fb9603d6",
    "metadata": {},
    "outputs": [
@@ -297,7 +296,7 @@
        "array([0.50166391])"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,13 +320,6 @@
    "id": "fefadc66-0f72-4e59-87df-72c8776b261b",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[LightGBM] [Warning] Found whitespace in feature_names, replace with underlines\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -354,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 12,
    "id": "1e6f7dfd-5402-49d4-8b47-df8110ae2aa1",
    "metadata": {},
    "outputs": [
@@ -371,7 +363,7 @@
        "array([0.60868605])"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "19f4584a-d90f-4b94-9fcc-bbdf708ca2d2",
    "metadata": {},
    "outputs": [
@@ -466,7 +458,7 @@
        "na_ratio  0.026567  0.033167               0.00046  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "id": "8389dc84-4c9b-4a30-9e42-7d0e509261ab",
    "metadata": {},
    "outputs": [
@@ -494,7 +486,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "ebb1486b-80b6-47cb-91af-1fc7599f8490",
    "metadata": {},
    "outputs": [
@@ -572,7 +564,7 @@
        "Price  150.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "e4e81596-dbf2-475c-a7a1-e427b32d1f95",
    "metadata": {},
    "outputs": [
@@ -608,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 17,
    "id": "6183223e-9334-45b5-a4d4-5bfbdcc1c560",
    "metadata": {},
    "outputs": [
@@ -624,7 +616,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "36789e51-63a5-46e7-b8f4-aed04cd98470",
    "metadata": {},
    "outputs": [
@@ -739,7 +731,7 @@
        "Style                0.068897  9.661381e-01        3"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 19,
    "id": "53f0c10d-4a32-4b62-ae68-c3cfc06dc7ce",
    "metadata": {},
    "outputs": [
@@ -783,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "74aace69-bede-4c31-9e53-4c57af10aa50",
    "metadata": {},
    "outputs": [
@@ -912,7 +904,7 @@
        "Color               4.832583e-01  0.147923  0.000000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "c07a49d3-935a-4d25-8c02-04b3620783f9",
    "metadata": {},
    "outputs": [
@@ -954,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "1893bd72-a03a-45ee-b2f7-a9d0aca79c89",
    "metadata": {},
    "outputs": [
@@ -977,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "64825b07-6286-48a3-a774-d7a64392795f",
    "metadata": {},
    "outputs": [
@@ -1023,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "1ba5183f-9ef3-4f64-89fe-0723477d37bc",
    "metadata": {},
    "outputs": [
@@ -1071,7 +1063,7 @@
        "Price     79.166779  82.148575  80.271378  81.971069"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "dd16bff1-c840-4cc1-bc9f-69a157161415",
    "metadata": {},
    "outputs": [
@@ -1112,7 +1104,7 @@
        "Name: count, Length: 4320, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 27,
    "id": "2d71fef2-9f38-4700-8034-4286d098511d",
    "metadata": {},
    "outputs": [],
@@ -1157,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 28,
    "id": "a18c9436-d136-417b-8a94-361f826d194d",
    "metadata": {},
    "outputs": [
@@ -1167,7 +1159,7 @@
        "38.940063"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 29,
    "id": "842cf6b3-be2a-466a-bd7d-1f5287811fa2",
    "metadata": {},
    "outputs": [
@@ -1297,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 30,
    "id": "a0dbc4d9-fe20-4def-824d-311add73b1b3",
    "metadata": {},
    "outputs": [
@@ -1322,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 31,
    "id": "9535bff3-5f8b-45f5-b97c-eb5752f52ee9",
    "metadata": {},
    "outputs": [
@@ -1372,7 +1364,7 @@
        "pvalue      0.894956          9.522767e-22"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1386,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 32,
    "id": "2dedcccf-2430-465b-918b-4615f4afd7cd",
    "metadata": {},
    "outputs": [
@@ -1436,7 +1428,7 @@
        "Weight Capacity (kg)      0.002542              1.000000"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 33,
    "id": "d671e4a3-999c-425b-a46b-f21f98f5cd28",
    "metadata": {},
    "outputs": [
@@ -1517,7 +1509,7 @@
        "Weight Capacity (kg)    0.163490  0.195311  0.52509  "
       ]
      },
-     "execution_count": 247,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 34,
    "id": "ee63f12f-20f4-4500-86fb-557dc308f18a",
    "metadata": {},
    "outputs": [
@@ -1572,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 35,
    "id": "a47ad92b-d7ea-450c-98b0-0bd5a5c29181",
    "metadata": {},
    "outputs": [
@@ -1601,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 36,
    "id": "5b1afe90-1239-41a0-92b0-e93d51341768",
    "metadata": {},
    "outputs": [
@@ -1638,14 +1630,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 37,
    "id": "175cd711-aab2-4d6c-a6cd-1494e8c69240",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "dad90579cb4d4d639bb50b540c63c686",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1659,7 +1651,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "d2fb1a7ebdb64e54899fb7544df85d9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1684,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 38,
    "id": "400ce550-f7bf-4bc7-92a3-a9e18148eaa7",
    "metadata": {},
    "outputs": [
@@ -1710,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 39,
    "id": "b07953c5-2288-4599-b372-2970b407c785",
    "metadata": {},
    "outputs": [
@@ -1752,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 40,
    "id": "4983a9ae-bbaa-46e3-b417-9e359e8743d2",
    "metadata": {},
    "outputs": [
@@ -1841,7 +1833,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
